[package]
name = "ce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version ="1.19", features = ["full"] }
tokio-stream = { version ="0.1" }
notify = "4.0"
structopt = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tui = "0.18"
crossterm = { version = "0.23", features = ["event-stream"] }
